<resources>
    <string name="app_name">AMADAssignment1</string>

    <!-- Strings related to Main Activity -->

    <string name="tag_hint_email">Email</string>
    <string name="tag_hint_password">Password</string>
    <string name="tag_Login">Login</string>
   <!-- String related to Register Activity-->
    <string name="Signup">Sign up</string>
    <string name="email">Email</string>
    <string name="sPassword">Password</string>
    <string name="cPassword">Confirm Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="Address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>



</resources>
