<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.etuloser.padma.rohit.amadassignment1.ViewProfile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <EditText
                    android:id="@+id/profile_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:enabled="false"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_age_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="text"
                    android:maxLines="1"
                    android:enabled="false"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_Weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_Weight_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight"
                    android:inputType="text"
                    android:maxLines="1"
                    android:enabled="false"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_address_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Address"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false"
                    android:textColor="@color/colorAccent"
                    />
            </android.support.design.widget.TextInputLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:weightSum="3"
                >



                <Button
                    android:id="@+id/VEdit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="38dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorAccent"
                    android:onClick="OnEdit"
                    android:text="Edit"
                    />


                <Button
                    android:id="@+id/VCancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="38dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorAccent"
                    android:onClick="OnCancel"
                    android:text="@string/cancel"
                    />

                <Button
                    android:id="@+id/VSave"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="38dp"
                    android:background="@color/colorAccent"
                    android:onClick="OnSave"
                    android:text="Save"
                    android:enabled="false"
                    />





            </LinearLayout>

        </LinearLayout>


    </LinearLayout>



</LinearLayout>
